src/assets/tailwind.css
@tailwind base;
@tailwind components;
@tailwind utilities;

#app {
  font-family: 'Inter', sans-serif;
}

/* components of tailwindcss */

@layer components {
  /* universal start */

  .flex-center {
    @apply flex justify-center items-center;
  }

  .flex-between {
    @apply flex justify-between items-center;
  }
  .flex-around {
    @apply flex justify-around items-center;
  }
  .layout__full-height {
    @apply w-full min-h-screen;
  }

  /* grid */
  .product-grid--columns {
    @apply grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3;
  }

  /* universal end */
  .product-hover {
    @apply lg:hover:shadow-lg overflow-hidden lg:hover:delay-100 lg:hover:duration-200 lg:hover:ease-in-out;
  }

  .full-screen-center {
    @apply flex flex-col justify-center items-center;
  }

  /* form */
  .form-container {
    @apply w-full md:w-4/5 lg:w-3/4 xl:w-1/2 mx-auto border border-gray-800/25 rounded-lg bg-white;
  }
  .form-title-box {
    @apply w-full text-center  rounded-t-xl p-2;
  }
  .form-title {
    @apply text-2xl font-semibold text-gray-800;
  }
  .form-element-container {
    @apply w-full flex flex-col justify-between items-center gap-y-5;
  }
  .form-label {
    @apply block text-sm font-medium text-gray-700;
  }
  .form__input--field,
  .form__input--file {
    @apply block w-full px-4 py-1 border border-gray-300 rounded-md shadow-sm focus:ring-pink-500 
    focus:border-pink-500 focus-visible:outline-none;
  }

  .form-submit-btn {
    @apply w-full px-4 py-2 bg-blue-600 text-white text-sm font-medium rounded-md shadow-sm
     hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500;
  }
  .message-box {
    @apply block w-full px-4 py-2 border border-gray-300 rounded-md shadow-sm
     focus:ring-blue-500 focus:border-blue-500;
  }
  .preview-modal__image {
    @apply w-36 h-24 object-cover rounded-md border border-gray-300;
  }
  /* image preview */
  .close-preview-image {
    @apply absolute top-0 right-0 text-white bg-slate-600 rounded-full w-5 h-5 flex flex-col justify-center items-center 
    p-1 shadow-md hover:bg-red-600 focus:outline-none;
  }

  /* table */

  .layout {
    @apply px-2 xl:px-4 mx-auto w-full;
  }
  .layout__inner {
    @apply w-full relative overflow-hidden bg-white dark:bg-gray-800;
  }
  .table-wrapper {
    @apply overflow-x-auto max-h-[740px] overflow-y-auto;
  }
  .table {
    @apply w-full text-sm text-left text-gray-500 dark:text-gray-400 border-separate border border-slate-100;
  }
  .table__header {
    @apply text-xs uppercase text-white bg-lime-600 overflow-hidden sticky top-0;
  }
  .table__row {
    @apply border-b dark:border-gray-600;
  }
  .table__header-cell {
    @apply px-4 py-1 border border-slate-300;
  }
  .table__body {
    /* Optional: custom styles for the table body */
  }
  .table__body-row--hover {
    @apply hover:bg-gray-100 dark:hover:bg-gray-700;
  }
  .table__cell {
    @apply px-4 py-2 font-medium text-gray-900 whitespace-nowrap dark:text-white border border-slate-300;
  }
  .table__cell--title {
    @apply font-medium text-gray-900 whitespace-nowrap dark:text-white;
  }
  .badge {
    @apply text-xs font-medium px-2 py-0.5 rounded;
  }
  .table__cell--delete {
    @apply text-center flex justify-center items-center;
  }
  .table__checkbox-wrapper {
    @apply flex;
  }
  .table__serial {
    @apply ml-2;
  }

  .table__quantity-controls {
    @apply flex gap-x-2;
  }
  .table__quantity {
    @apply w-4 h-4 flex justify-center items-center;
  }
  .button {
    @apply border border-inherit rounded-md shadow-md p-0.5 w-4 h-4 flex justify-center items-center;
  }
  .button--increase {
    @apply bg-lime-600 text-white;
  }
  .button--decrease {
    @apply bg-rose-600 text-white;
  }
  .button--hidden {
    @apply hidden;
  }
  .button--inline {
    @apply inline-flex;
  }
  .button--delete {
    @apply border border-inherit p-1 rounded-md;
  }
  .button__icon {
    @apply w-4 h-4 text-pink-600;
  }
  /* pagination */
  .pagination {
    @apply flex flex-col items-start justify-between p-4 space-y-3 md:flex-row md:items-center md:space-y-0;
  }

  .pagination__info {
    @apply text-sm font-normal text-gray-500 dark:text-gray-400;
  }

  .pagination__info--highlight {
    @apply font-semibold text-gray-900 dark:text-white;
  }

  .pagination__list {
    @apply inline-flex items-stretch -space-x-px;
  }

  .pagination__item {
    @apply flex items-center justify-center px-3 py-2 text-sm leading-tight text-gray-500 bg-white border
     border-gray-300 hover:bg-gray-100 hover:text-gray-700 dark:bg-gray-800 dark:border-gray-700
      dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white;
  }

  .pagination__item--active {
    @apply z-10 border  dark:border-gray-700 dark:bg-gray-700 dark:text-white;
  }

  .pagination__prev-next {
    @apply flex items-center justify-center h-full py-1.5 px-3 text-gray-500 bg-white border
     border-gray-300 hover:bg-gray-100 hover:text-gray-700 dark:bg-gray-800 dark:border-gray-700
      dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white;
  }

  .pagination__prev {
    @apply rounded-l-lg;
  }

  .pagination__next {
    @apply rounded-r-lg;
  }

  /* cards */

  .product-card-container {
    @apply w-full bg-inherit space-y-1 md:space-y-2 max-w-lg shadow-sm shadow-slate-200 rounded-2xl product-hover py-1.5;
  }

  .grid-view {
    @apply flex justify-between items-center;
  }

  .block-view {
    @apply block;
  }

  .image-container-full {
    @apply w-full flex flex-col justify-center items-center rounded-t-2xl toggle-screen-animation;
  }

  .image-container-grid {
    @apply w-3/5 flex flex-col justify-center items-center rounded-t-2xl toggle-screen-animation;
  }

  .image-full {
    @apply w-full object-cover h-[182px] rounded-t-xl toggle-screen-animation;
  }

  .image-grid {
    @apply w-full object-cover h-[132px] rounded-l-xl toggle-screen-animation;
  }

  .content-container {
    @apply px-1 md:px-2 xl:px-3 w-full;
  }

  .content-full {
    @apply py-1 md:py-2 lg:py-3 xl:py-5 space-y-3 toggle-screen-animation;
  }

  .content-grid {
    @apply py-1 space-y-0 toggle-screen-animation;
  }

  .title-container {
    @apply w-full flex justify-start items-center gap-x-1 md:gap-x-2;
  }

  .title {
    @apply text-base tracking-wide font-semibold text-gray-800;
  }

  .description {
    @apply text-sm tracking-wide leading-relaxed;
  }

  .price-container {
    @apply w-full flex justify-between items-center;
  }

  .price-line-through {
    @apply line-through;
  }

  .price-no-underline {
    @apply no-underline;
  }

  .price-hidden {
    @apply hidden;
  }

  .price-block {
    @apply no-underline block;
  }

  .info-button {
    @apply bg-slate-800/70 text-white w-5 h-5 text-center text-sm rounded-full lg:hover:bg-pink-700;
  }
  .offer-card {
    @apply w-full bg-inherit space-y-2 max-w-full lg:max-w-2xl shadow-xl shadow-slate-200 bg-lime-200 rounded-2xl overflow-hidden;
  }
  .offer-title {
    @apply text-lg text-red-500 tracking-wide font-semibold;
  }

  /* end cards */

  /* modal start */
  .modal__container {
    @apply w-full  bg-white border border-gray-200 p-6 rounded-lg shadow-lg relative;
  }
  .modal__close--button {
    @apply absolute top-0 right-0 bg-gray-500 text-white rounded-full p-1 hover:bg-red-600 focus:outline-none cursor-pointer;
  }
  /* modal end */

  /* utilities*/
  .view-toggle__button {
    @apply bg-auto px-1 rounded-md;
  }
  .view-toggle__button--active {
    @apply bg-gray-600 text-pink-200 animate-pulse;
  }

  .modal-medium{
    width: 50rem !important;
  }
  .modal-large{
    width: 120rem !important;
  }

  /* search form component */
  
  /*end  utilities*/

  /* print data or page */

  /* end print data or page */
}

/* transitions */

.toggle-screen-animation {
  @apply transition-all duration-500;
}

